--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="eng">
   <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="minecraft, minecraft pvp, pvp, CrossPack, XilanStudio, Xilan, Pefek45, pefek45">
     <title>CrossPack</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="images/png" href="icon.png">
